added endpoint /api/reset-user for reseting all progress
