# docs/swagger.json
@@ -1,10 +1,10 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "REST API for Novels app.\nNew in version:\u003cbr\u003e - fixed response for the existed guest user sign in",
+        "description": "REST API for Novels app.\nNew in version:\u003cbr\u003e - added endpoint /api/reset-user for reseting all progress;\u003cbr\u003e - edited usernames for guest and social login.",
         "title": "Novels REST API",
         "contact": {},
-        "version": "0.0.7"
+        "version": "0.0.8"
     },
     "host": "165.227.207.77:8000",
     "basePath": "/",
@@ -651,6 +651,43 @@
                         "schema": {
                             "$ref": "#/definitions/dto.AuthResponse"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/ErrResp"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/ErrResp"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/reset-user": {
+            "put": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "description": "Reset all user progress and rate",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Authentication"
+                ],
+                "summary": "Reset user",
+                "responses": {
+                    "200": {
+                        "description": ""
                     },
                     "400": {
                         "description": "Bad Request",
